<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_principal"
    app:startDestination="@id/registroFragment">
    <fragment
        android:id="@+id/registroFragment"
        android:name="com.example.relaxspa.ui.views.fragment.RegistroFragment"
        android:label="@string/titulo"
        android:textAlignment="center"
        tools:layout="@layout/fragment_registro" >
        <action
            android:id="@+id/action_registroFragment_to_servicatalogoFragment"
            app:destination="@id/servicatalogoFragment" />
    </fragment>
    <fragment
        android:id="@+id/servicatalogoFragment"
        android:name="com.example.relaxspa.ui.views.fragment.ServicatalogoFragment"
        android:label="@string/titulo2"
        tools:layout="@layout/fragment_servicatalogo">
        <argument
            android:name="usuario"
            app:argType="com.example.relaxspa.entity.Usuario"
            app:nullable="true" />
        <action
            android:id="@+id/action_servicatalogoFragment_to_catalogoFragment"
            app:destination="@id/catalogoFragment" />
        <action
            android:id="@+id/action_servicatalogoFragment_to_serviciosFragment"
            app:destination="@id/serviciosFragment" />
        <action
            android:id="@+id/action_servicatalogoFragment_to_coctelFragment"
            app:destination="@id/coctelFragment" />
    </fragment>
    <fragment
        android:id="@+id/serviciosFragment"
        android:name="com.example.relaxspa.ui.views.fragment.ServiciosFragment"
        android:label="@string/titulo3"
        tools:layout="@layout/fragment_servicios">
        <action
            android:id="@+id/action_serviciosFragment_to_solicitadosFragment"
            app:destination="@id/solicitadosFragment" />
        <argument
            android:name="usuarios"
            app:argType="com.example.relaxspa.entity.Usuario"
            app:nullable="true" />
        <action
            android:id="@+id/action_serviciosFragment_to_contactanosFragment"
            app:destination="@id/contactanosFragment" />
        <action
            android:id="@+id/action_serviciosFragment_to_domicilioFragment"
            app:destination="@id/domicilioFragment" />
        <action
            android:id="@+id/action_serviciosFragment_to_reservaFragment"
            app:destination="@id/reservaFragment" />
        <action
            android:id="@+id/action_serviciosFragment_to_servicatalogoFragment"
            app:destination="@id/servicatalogoFragment" />
    </fragment>
    <fragment
        android:id="@+id/solicitadosFragment"
        android:name="com.example.relaxspa.ui.views.fragment.SolicitadosFragment"
        android:label="@string/titulo4"
        tools:layout="@layout/fragment_solicitados">
        <argument
            android:name="usuarios"
            app:argType="com.example.relaxspa.entity.Usuario"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/contactanosFragment"
        android:name="com.example.relaxspa.ui.views.fragment.ContactanosFragment"
        android:label="@string/titulo5"
        tools:layout="@layout/fragment_contactanos">
        <action
            android:id="@+id/action_contactanosFragment_to_serviciosFragment"
            app:destination="@id/serviciosFragment" />
    </fragment>
    <fragment
        android:id="@+id/catalogoFragment"
        android:name="com.example.relaxspa.ui.views.fragment.CatalogoFragment"
        android:label="@string/titulo6"
        tools:layout="@layout/fragment_catalogo">
        <action
            android:id="@+id/action_catalogoFragment_to_servicatalogoFragment"
            app:destination="@id/servicatalogoFragment" />
    </fragment>
    <fragment
        android:id="@+id/coctelFragment"
        android:name="com.example.relaxspa.ui.views.fragment.CoctelFragment"
        android:label="@string/titulo7"
        tools:layout="@layout/fragment_coctel" />
    <fragment
        android:id="@+id/domicilioFragment"
        android:name="com.example.relaxspa.ui.views.fragment.DomicilioFragment"
        android:label="@string/titulo8"
        tools:layout="@layout/fragment_domicilio">
        <action
            android:id="@+id/action_domicilioFragment_to_serviciosFragment"
            app:destination="@id/serviciosFragment" />
    </fragment>
    <fragment
        android:id="@+id/reservaFragment"
        android:name="com.example.relaxspa.ui.views.fragment.ReservaFragment"
        android:label="@string/titulo9"
        tools:layout="@layout/fragment_reserva">
        <action
            android:id="@+id/action_reservaFragment_to_serviciosFragment"
            app:destination="@id/serviciosFragment" />
    </fragment>
</navigation>