<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/serviCatoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.relaxspa.ui.views.fragment.ServicatalogoFragment">


    <Button
        android:id="@+id/btnCatalogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:backgroundTint="#000000"
        android:insetLeft="30dp"
        android:insetRight="30dp"
        android:onClick="BotonCatalogo"
        android:text="@string/catalogo"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNuestroServi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#000000"
        android:insetLeft="30dp"
        android:insetRight="30dp"
        android:onClick="BotonServicios"
        android:text="@string/servicios"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCatalogo" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:layout_marginLeft="160sp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="160sp"
        android:backgroundTint="#000000"
        android:onClick="BotonSalir"
        android:text="SALIR"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuestroServi" />

    <TextView
        android:id="@+id/lblatencion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Atencion"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalir" />

    <TextView
        android:id="@+id/lblversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/Version"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblatencion" />


</androidx.constraintlayout.widget.ConstraintLayout>