<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.fragment.ServiciosFragment">

    <TextView
        android:id="@+id/lblservicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nuestros_servicios"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationY="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReserva"
        android:layout_width="279dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:drawableBottom="@drawable/reserve"
        android:insetLeft="130dp"
        android:insetRight="130dp"
        android:onClick="BotonReserve"
        android:rotationX="-10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblservicios" />

    <Button
        android:id="@+id/btnDomicilio"
        android:layout_width="184dp"
        android:layout_height="168dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFDFD"
        android:drawableBottom="@drawable/domicilio"
        android:insetLeft="40dp"
        android:insetRight="40dp"
        android:onClick="BotonDomicilio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReserva" />

    <Button
        android:id="@+id/btnServiSoli"
        android:layout_width="188dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:drawableBottom="@drawable/serviciossolicitados"
        android:insetLeft="55dp"
        android:insetRight="55dp"
        android:onClick="BotonSolicitados"
        android:translationX="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnDomicilio"
        app:layout_constraintTop_toBottomOf="@+id/btnReserva" />

    <Button
        android:id="@+id/btnUsuarios"
        android:layout_width="191dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="BotonUsuarios"
        android:text="USUARIOS REGISTRADOS"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnServiSoli"
        app:layout_constraintTop_toTopOf="@+id/btnServiSoli"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnContacto"
        android:layout_width="410dp"
        android:layout_height="169dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:drawableBottom="@drawable/contactanos"
        android:insetLeft="110dp"
        android:insetTop="-32dp"
        android:insetRight="110dp"
        android:insetBottom="10dp"
        android:onClick="BotonContactanos"
        android:rotationX="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnServiSoli" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#020202"
        android:onClick="BotonSalir"
        android:text="@string/Salir"
        android:textColor="#E1EEEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContacto" />

    <TextView
        android:id="@+id/lblvPrograma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/programa"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnSalir"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>